<resources>
    <string name="app_name">SBEM</string>
    <string name="nav_header_title">Small Business Management System</string>
    <string name="nav_header_subtitle">emp2021loyee@Gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="add">Add</string>

    <string name="contact">Contact</string>
    <string name="create">Create</string>
    <string name="create_supervisors">Create log in credentials for Department Head</string>

    <string name="delete">Delete</string>
    <string name="department">Departments</string>
    <string name="dept_id">Department ID</string>
    <string name="dept_name">Department Name</string>
    <string name="dept_head">Department Head Name</string>
    <string name="dept_remove">Deactivate Department</string>
    <string name="dept_create">Create Department</string>
    <string name="dept_allocate_manager">Allocate Department Head</string>
    <string name="dept_save">Save Department</string>
    <string name="dept_save_credentials">Save Department Head Credentials</string>
    <string name="dept_view">View Departments</string>
    <string name="dept_status">Department Status</string>
    <string name="duties">Duties</string>

    <string name="employees">Employees</string>
    <string name="emp_id">Employee ID</string>
    <string name="emp_fname">First Name</string>
    <string name="emp_lname">Last Name</string>
    <string name="emp_email">Employee E-mail</string>
    <string name="emp_new">New Employees</string>
    <string name="emp_terminate">Terminate Employee</string>
    <string name="emp_view">View Employees</string>
    <string name="emp_termination_date">Termination Date</string>
    <string name="emp_phoneno">Phone Number</string>
    <string name="emp_salary">Salary</string>
    <string name="emp_hire_date">Employee Hire Date</string>
    <string name="emp_save">Save New Employee</string>
    <string name="emp_termination_confirmation">
        To confirm termination of employee, ensure correct values for Employee ID,
        First Name and Last Name.
    </string>
    <string name="exit">Exit</string>

    <string name="leaves">Leaves</string>
    <string name="login">Login</string>
    <string name="log_out">Log out</string>

    <string name="menu_home">Home</string>

    <string name="menu_profile">Profile</string>

    <string name="menu_supervisor">Department Head</string>

    <string name="org_name">Organisation Name</string>

    <string name="remove">Remove</string>

    <string-array name="status">
        <item>Activate</item>
        <item>Deactivate</item>
    </string-array>
    <string name="title">Job Title</string>

    <string name="user_mail">User E-mail</string>

    <string name="version">Version: 1.0.0</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="invalid_email">Not a valid Email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>