<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_supervisor"
            android:title="@string/menu_supervisor" />
    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_log_out"
                android:title="@string/log_out" />
            <item
                android:id="@+id/nav_exit"
                android:title="@string/exit" />
        </menu>
    </item>
</menu>