<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.departments.DepartmentCreate">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:orientation="horizontal">

            <Button
                app:backgroundTint="@null"
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add"
                android:textColor="@color/blue"
                android:background="@color/white"
                android:onClick="openAdd"/>

            <Button
                app:backgroundTint="@null"
                android:id="@+id/remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/remove"
                android:background="@color/blue"
                android:onClick="openRemove"/>

            <Button
                app:backgroundTint="@null"
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:text="@string/dept_view"
                android:onClick="openView"/>

            <Button
                app:backgroundTint="@null"
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:text="@string/menu_home"
                android:onClick="openHome"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/dept_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="50sp"
                android:layout_marginBottom="20sp"
                android:layout_marginRight="20sp"
                android:hint="@string/dept_id"
                android:padding="10sp"
                android:textAlignment="center"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/dept_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginBottom="20sp"
                android:layout_marginRight="20sp"
                android:hint="@string/dept_name"
                android:padding="10sp"
                android:textAlignment="center"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/dept_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:padding="10dp"
                android:hint="@string/dept_head"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button"
                android:padding="20sp"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:layout_margin="20sp"
                android:text="@string/dept_save" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>