<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.departments.DepartmentRemove">

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20sp"
        android:padding="20sp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emp_termination_confirmation"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed-light"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@drawable/red_round"
            android:textColor="@color/white"
            android:padding="10sp"
            android:layout_marginBottom="20sp"/>

        <EditText
            android:id="@+id/empid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/emp_id"
            android:layout_margin="10sp"
            android:padding="10sp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/emp_fname"
            android:layout_margin="10sp"
            android:textAlignment="center"
            android:padding="10sp"/>

        <EditText
            android:id="@+id/lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/emp_lname"
            android:layout_margin="10sp"
            android:textAlignment="center"
            android:padding="10sp"/>

        <EditText
            android:id="@+id/termination_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/emp_termination_date"
            android:inputType="date"
            android:layout_margin="10sp"
            android:textAlignment="center"
            android:padding="10sp"/>

        <Button
            app:backgroundTint="@null"
            android:background="@drawable/rounded_button"
            android:id="@+id/terminate_employee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emp_terminate"
            android:textSize="20sp"
            android:layout_margin="10sp"
            android:padding="10sp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
