<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.supervisor.SupervisorFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50sp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/create_supervisor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_supervisors"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10sp"
            android:hint="@string/dept_head"
            android:textAlignment="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10sp"
            android:hint="@string/prompt_password"
            android:textAlignment="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10sp"
            android:hint="@string/prompt_password"
            android:textAlignment="center" />

        <Button
            android:id="@+id/dept_credentials"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_margin="20sp"
            android:text="@string/dept_save_credentials" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>