<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="20sp"
        android:layout_margin="20sp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10sp"
                android:textAlignment="center"
                android:textSize="30sp"
                android:hint="@string/prompt_email"
                android:inputType="textWebEmailAddress" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10sp"
                android:textSize="30sp"
                android:autofillHints=""
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:textAlignment="center" />

        <Button
            app:backgroundTint="@null"
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:text="@string/login"
            />
    </LinearLayout>

</RelativeLayout>