<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.departments.DepartmentRemove">

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20sp"
        android:padding="20sp">

        <EditText
            android:id="@+id/dept_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="50sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="20sp"
            android:hint="@string/dept_id"
            android:padding="10sp"
            android:textAlignment="center"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/dept_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="40sp"
            android:hint="@string/dept_name"
            android:padding="10sp"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/dept_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:text="@string/dept_status"
            android:padding="10sp"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Spinner
            android:id="@+id/dept_deactivate"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:prompt="@array/status"
            android:textAlignment="center"
            android:entries="@array/status"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_margin="20sp"
            android:padding="20sp"
            android:textSize="25sp"
            android:background="@drawable/rounded_button"
            android:text="@string/dept_remove" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
